# toggl-cli

./: .editorconfig  .gitignore  .pyup.yml  .travis.yml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  README.txt  index.html  mkdocs.yml  pydocmd.yml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml  test-requirements.txt  tests.py  toggl.py  toggl.sh  toggl_runner.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish_pypi.yaml  release.yaml  release_github.yaml  tests.yaml
api/: index.html
cli/: index.html
docs/: CNAME  api.md  cli.md  index.md
search/: search_index.json
tests/: conftest.py  helpers.py  test_api.py  test_cli.py  test_utils.py  tests_requirements.txt
tests/configs/: default.config  non-premium.config  premium.config
tests/fixtures/: cleanup.py  session.py
tests/integration/: conftest.py  factories.py  helpers.py  test_clients.py  test_projects.py  test_tags.py  test_time_entries.py
tests/integration/configs/: default.config
tests/unit/: test_utils.py
tests/unit/api/: test_base.py  test_fields.py
tests/unit/cli/: test_types.py
tests/unit/helpers/: test_duration.py
tests/unit/utils/: test_config.py  test_migrations.py
toggl/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  toggl.py  utils.py
toggl/api/: __init__.py  base.py  fields.py  models.py
toggl/cli/: __init__.py  commands.py  helpers.py  themes.py  types.py
toggl/utils/: __init__.py  bootstrap.py  config.py  metas.py  migrations.py  others.py
