[metadata]
name = togglCli
summary = Command line tool and set of Python wrapper classes for interacting with toggl's API
description-file = README.md
description-content-type = text/markdown
author = D. Robert Adams & Adam Uhlir
author-email = hello@adam-uhlir.me
license = MIT
home-page = https://toggl.adam-uhlir.me
python_requires = ==3.5.*, ==3.6.*, ==3.7.*
project_urls =
    Source = https://github.com/auhau/toggl-cli
    Documentation = https://toggl.adam-uhlir.me
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Office/Business :: Scheduling
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
keywords =
    toggl
    time-tracking
    cli
    api


[files]
packages =
    toggl

[entry_points]
console_scripts =
    toggl = toggl.toggl:main

[wheel]
universal = 1

[aliases]
test=pytest