[metadata]
name = togglCli
summary = Command line tool and set of Python wrapper classes for interacting with toggl's API
description-file = README.md
description-content-type = text/markdown
author = D. Robert Adams & Adam Uhlir
author-email = hello@adam-uhlir.me
license = MIT
home-page = https://toggl.uhlir.dev
python_requires = >=3.6.0
project_urls =
    Source = https://github.com/auhau/toggl-cli
    Documentation = https://toggl.uhlir.dev
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Office/Business :: Scheduling
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers

[files]
packages =
    toggl

[entry_points]
console_scripts =
    toggl = toggl.toggl:main

[bdist_wheel]
universal = 1

[aliases]
test=pytest
