[metadata]
name = togglCli
version = attr: toggl.__version__
summary = Command line tool and set of Python wrapper classes for interacting with toggl's API
description-file = README.md
description-content-type = text/markdown
author = D. Robert Adams & Adam Uhlir
author-email = adam@uhlir.dev
license = MIT
home-page = https://toggl.uhlir.dev
python_requires = >=3.7.0
project_urls =
    Source = https://github.com/auhau/toggl-cli
    Documentation = https://toggl.uhlir.dev
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    Topic :: Office/Business :: Scheduling
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers

[files]
packages =
    toggl

[entry_points]
console_scripts =
    toggl = toggl.toggl:main

[bdist_wheel]
universal = 1

[aliases]
test=pytest
